Bug 342328 - advanced color selector, add shape and tool otions dockers should be disabled when there's no document.
Summary: advanced color selector, add shape and tool otions dockers should be disabled...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-30 09:52 UTC by mvowada
Modified: 2014-12-31 12:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2014-12-30 09:52:29 UTC
When no documents are open, the dockers are all disabled except these 5:

1. Add Shape
2. Advanced Color Selector
3. Reference Images
4. Task Sets
5. Tool Options

(Krita version: 2+git20141226+r73494-51-dk~ubuntu14.04.1)

Reproducible: Always
Comment 1 Halla Rempt 2014-12-30 09:57:33 UTC
Well, that's intentional -- at least, advanced color selector, add shape and tool options should be disabled too, since they only are relevant when there's an image open. Task sets can be used to guide the user through creating a new document and reference images is always useful.
Comment 2 mvowada 2014-12-30 10:09:53 UTC
Ok, thank you. Actually, having never dealt with "Task Sets" and "Reference Images" yet, I haven't thought at first that they could be of aid even when no documents are open, sorry.
Comment 3 Halla Rempt 2014-12-30 10:31:16 UTC
If there isn't a document, you cannot add a shape to it or manipulate it with a tool. The color selectors are a bit more debatable. I've disabled that one, too, though -- now only taskset and reference images are enabled when there is no document. Push & close of the bug will be later because part of it needs to go through reviewboard.
Comment 4 Halla Rempt 2014-12-31 12:05:39 UTC
Git commit 78dc4a3e1a6b4637da68efca16834b8f1103daa6 by Boudewijn Rempt.
Committed on 30/12/2014 at 10:27.
Pushed by rempt into branch 'calligra/2.9'.

Disable three more dockers if there's no canvas

The tool options docker and shape collection weren't canvas observers
yet, and the advanced color selector wasn't disabled.

M  +3    -1    krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_ng_dock.cpp
M  +11   -0    libs/widgets/KoToolDocker.cpp
M  +7    -2    libs/widgets/KoToolDocker.h
M  +10   -0    plugins/dockers/shapecollection/ShapeCollectionDocker.cpp
M  +62   -55   plugins/dockers/shapecollection/ShapeCollectionDocker.h

http://commits.kde.org/calligra/78dc4a3e1a6b4637da68efca16834b8f1103daa6