Disable three more dockers if there's no canvas

The tool options docker and shape collection weren't canvas observers
yet, and the advanced color selector wasn't disabled.

BUG:342328