krita/plugins/extensions/dockers/advancedcolorselector/kis_color_selector_ng_dock.cpp
@@ -25,7 +25,7 @@
 
 
 KisColorSelectorNgDock::KisColorSelectorNgDock()
-        : QDockWidget()
+    : QDockWidget()
 {
     m_colorSelectorNgWidget = new KisColorSelectorNgDockerWidget(this);
 
@@ -37,11 +37,13 @@ KisColorSelectorNgDock::KisColorSelectorNgDock()
 
 void KisColorSelectorNgDock::setCanvas(KoCanvasBase * canvas)
 {
+    setEnabled(canvas != 0);
     m_colorSelectorNgWidget->setCanvas(dynamic_cast<KisCanvas2*>(canvas));
 }
 
 void KisColorSelectorNgDock::unsetCanvas()
 {
+    setEnabled(false);
     m_colorSelectorNgWidget->unsetCanvas();
 }
 
